fix: consolidar ajustes de seguranca e checkin